# Plazza

./: .gitignore  .pre-push  CMakeLists.txt  Makefile  README.md
AbstractionTest/Sources/: Main.cpp
Class/: DataQueue.hpp  Order.cpp  Order.hpp  Pizza.hpp  Process.cpp  Process.hpp  Reception.cpp  Reception.hpp
Commons/Classes/: AKitchen.cpp  AKitchen.hpp  KitchenData.hpp  Order.cpp  Order.hpp  Pizza.cpp  Pizza.hpp  PizzaManager.cpp  PizzaManager.hpp
Commons/Classes/Abstractions/: Channel.hpp  DataQueue.hpp  ExternLock.cpp  ExternLock.hpp  LockingBool.hpp  Mutex.cpp  Mutex.hpp  Process.cpp  Process.hpp  SharedData.hpp  Thread.hpp  ThreadPool.hpp
Commons/Classes/Debug/: Log.cpp  Log.hpp
Commons/Enums/: Ingredients.hpp
Commons/Sources/Class/: DataQueue.hpp  Order.hpp
Commons/Structures/: KitchenData.hpp
Headers/: Plazza.hpp
Kitchen/Headers/: Kitchen.hpp
Kitchen/Sources/: Kitchen.cpp
Plazza/Classes/: PlazzaServerAPIManager.cpp  PlazzaServerAPIManager.hpp  Reception.cpp  Reception.hpp
Plazza/Sources/: Plazza.cpp  Reception.cpp  Reception.hpp
PlazzaApplication/Desktop/Plugins/Android/: AndroidManifest.xml
PlazzaApplication/GearVR/Plugins/Android/assets/: oculussig_ce04160489e4a11802
PlazzaApplication/GearVR/Scripts/: Kitchen.cs  KitchenList.cs  Manager.cs  ManagerVR.cs  Requests.cs
PlazzaApplication/Mobile/Scripts/Manager/: Manager.cs
PlazzaApplication/Mobile/Scripts/Utils/: Requests.cs
PlazzaApplication/Scripts/Kitchens/: Kitchen.cs  KitchenList.cs
PlazzaApplication/Scripts/Manager/: Manager.cs
PlazzaApplication/Scripts/Utils/: Requests.cs  TouchToMove.cs  VRInputs.cs  pinchToZoom.cs
PlazzaServerAPI/: README.md  app.js  package.json
PlazzaServerAPI/routes/: refresh.js  status.js
PlazzaServerAPI/tmp/: orders.json  status.json
Sources/: Main.cpp
Tests/: Reception.cpp
