CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(plazza CXX)

SET(FLAG -Wall -Wextra -Wunused)
if(CMAKE_BUILD_TYPE MATCHES Debug)
    SET(FLAG ${FLAG} -g3 -DDEBUG=1)
endif()

FILE(GLOB_RECURSE COMMONS "Commons/*.cpp")
SET(COMMON_HEADERS
        "Commons/Classes"
        "Commons/Structures")

FILE(GLOB_RECURSE SRCS_PLAZZA "Plazza/Sources/*.cpp")
FILE(GLOB_RECURSE CLASSES_PLAZZA "Plazza/Classes/*.cpp")

FILE(GLOB_RECURSE SRCS_KITCHEN "Kitchen/Sources/*.cpp")
FILE(GLOB_RECURSE CLASSES_KITCHEN "Kitchen/Sources/Class/*.cpp")

ADD_EXECUTABLE(plazza ${COMMONS} ${SRCS_PLAZZA} ${CLASSES_PLAZZA})
TARGET_INCLUDE_DIRECTORIES(plazza PRIVATE
        ${COMMON_HEADERS}
        Plazza/Headers
        Plazza/Classes
)
TARGET_LINK_LIBRARIES(plazza PRIVATE pthread rt curl)
TARGET_COMPILE_OPTIONS(plazza PRIVATE ${FLAG})
SET_TARGET_PROPERTIES(plazza PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

ADD_EXECUTABLE(kitchen ${COMMONS} ${SRCS_KITCHEN} ${CLASSES_KITCHEN})
TARGET_INCLUDE_DIRECTORIES(kitchen PRIVATE
        ${COMMON_HEADERS}
        Kitchen/Headers
)
TARGET_LINK_LIBRARIES(kitchen PRIVATE pthread rt)
TARGET_COMPILE_OPTIONS(kitchen PRIVATE ${FLAG})
SET_TARGET_PROPERTIES(kitchen PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

ADD_EXECUTABLE(abs ${COMMONS} AbstractionTest/Sources/Main.cpp)
TARGET_INCLUDE_DIRECTORIES(abs PRIVATE
        ${COMMON_HEADERS}
)
TARGET_LINK_LIBRARIES(abs PRIVATE pthread rt)
TARGET_COMPILE_OPTIONS(abs PRIVATE ${FLAG})
SET_TARGET_PROPERTIES(abs PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)